# reframe

./: .gitignore  HOW_TO_UPDATE.md  dev.bat  dev_debug_log.txt  dev_debug_log_2.txt  dev_debug_log_2_utf8.txt  dev_debug_log_3.txt  dev_debug_log_3_utf8.txt  dev_debug_log_utf8.txt  dev_log.txt  implementation_plan.md  index.html  package-lock.json  package.json  tailwind.config.js
.agent/workflows/: build_release.md  start_dev.md
.github/workflows/: publish.yml
src/: App.css  App.tsx  WebcamOverlay.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AboutPanel.tsx  AudioMeter.tsx  CustomSelect.tsx  FloatingBar.tsx  InteractionLayer.tsx  PlaybackModal.tsx  RecordingTimer.tsx  SettingsPanel.tsx  Toggle.tsx
src/hooks/: useSettings.ts
