[package]
name = "reframe-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "reframe_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
dirs = "5.0"
chrono = "0.4"
tauri-plugin-fs = "2.4.4"
base64 = "0.22.1"
tauri-plugin-store = "2.4.1"
tauri-plugin-dialog = "2"
rdev = "0.5"
